[package]
name = "cuv"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cry-inc/cuv"
documentation = "https://docs.rs/cuv"
license = "MIT"
keywords = ["compressed", "unit", "vector", "normals"]
categories = ["algorithms", "compression", "computer-vision", "mathematics", "rendering"]
description = "Compressed unit vectors that can be used to store things like normal vectors efficiently."
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
]

[dependencies]
once_cell = "1.18.0"

[dev-dependencies]
rand = "0.8"
